Changes for Build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,10 +5,10 @@ ProjectID=D7D09A9B4E772559E893E0B81B8B0604
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
-FullRebuild=False
-ForDistribution=False
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
