Added Farm Level to be included when packaging

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -94,6 +94,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/LevelPrototyping/MainMenu/MainMenuLevel")
 +MapsToCook=(FilePath="/Game/forestlvl")
++MapsToCook=(FilePath="/Game/LevelPrototyping/FarmLevel/farmlvl")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 bRetainStagedDirectory=False
