--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,8 +93,9 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/LevelPrototyping/MainMenu/MainMenuLevel")
-+MapsToCook=(FilePath="/Game/forestlvl")
++MapsToCook=(FilePath="/Game/LevelPrototyping/ForestLevel/forestlvl")
 +MapsToCook=(FilePath="/Game/LevelPrototyping/FarmLevel/farmlvl")
++MapsToCook=(FilePath="/Game/ThirdPerson/Maps/L_Town")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTree")
 +DirectoriesToAlwaysCook=(Path="/Wwise/WwiseTypes")
 bRetainStagedDirectory=False
